modified settings + some fixes

--- a/ress/b0rengar.properties
+++ b/ress/b0rengar.properties
@@ -6,7 +6,12 @@
 	<entry key="server">127.0.0.1</entry>
 	<entry key="port_tcp">6109</entry>
 	<entry key="port_udp">6110</entry>
-	<entry key="resolution_width">1024</entry>
-	<entry key="resolution_height">768</entry>
+	<entry key="scene_resolution_width">1024</entry>
+	<entry key="scene_resolution_height">768</entry>
 	<entry key="debug">true</entry>
+	<entry key="netw_sync_freq">0.25f</entry>
+    <entry key="netw_max_physicsdelay">0.25f</entry>
+    <entry key="scene_fps">60</entry>
+    <entry key="physics_fps">0.03f</entry>               
+	<entry key="character_speed">2</entry>
 </properties>
