--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,11 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=MyGame
 application.vendor=MyCompany
 assets.jar.name=assets.jar
-assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh\.xml,**/*.skeleton\.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
+assets.excludes=**/*.j3odata,**/*.mesh,**/*.skeleton,**/*.mesh.xml,**/*.skeleton.xml,**/*.scene,**/*.material,**/*.obj,**/*.mtl,**/*.3ds,**/*.dae,**/*.blend,**/*.blend*[0-9]
 assets.folder.name=assets
 assets.compress=true
 build.classes.dir=${build.dir}/classes
@@ -28,15 +32,21 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.BasicGame3-ress=ress\\
+file.reference.forms_rt.jar=forms_rt.jar
+file.reference.junit-4.11.jar=junit-4.11.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.jme3.classpath}:\
     ${libs.jme3-libraries.classpath}:\
-    ${file.reference.BasicGame3-ress}
+    ${file.reference.BasicGame3-ress}:\
+    ${file.reference.forms_rt.jar}:\
+    ${file.reference.junit-4.11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.5
 javac.target=1.5
 javac.test.classpath=\
@@ -62,6 +72,8 @@ jnlp.signed=false
 main.class=main.ClientMain
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
+mkdist.disabled=false
+obfuscate.options=-keep public class * extends com.jme3.app.Application{public *;}\n-keep public class * extends com.jme3.system.JmeSystemDelegate{public *;}\n-keep public class * implements com.jme3.renderer.Renderer{public *;}\n-keep public class * implements com.jme3.asset.AssetLoader{public *;}\n-keep public class * implements com.jme3.asset.AssetLocator{public *;}\n-keep public class * implements de.lessvoid.nifty.screen.ScreenController{public *;}\n-dontwarn\n-dontnote\n
 platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
