--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,7 +41,8 @@ javac.classpath=\
     ${libs.jme3-libraries.classpath}:\
     ${file.reference.BasicGame3-ress}:\
     ${file.reference.forms_rt.jar}:\
-    ${file.reference.junit-4.11.jar}
+    ${file.reference.junit-4.11.jar}:\
+    ${libs.jme3-test-data.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
